@startuml
' Titre du diagramme
title IOhire - Sprint 1: Fondations RH + CRUD de base

' Cache tous les cercles par défaut
hide circle
' Réactive le cercle uniquement pour les enums
show enum circle

' Paramètres pour un rendu pur Noir et Blanc
skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam backgroundColor white

skinparam class {
    BackgroundColor white
    BorderColor black
    ArrowColor black
}

left to right direction

'======================
' Enums
'======================
enum JobPostingStatus {
    DRAFT
    OPEN
    CLOSED
}

'======================
' Actors
'======================
class HRUser {
    email: String
    password: String
    role: String
    createSkill(name: String): Skill
    updateSkill(id: Integer, name: String): Skill
    deleteSkill(id: Integer): void
    createDepartment(name: String): Department
    updateDepartment(id: Integer, name: String): Department
    deleteDepartment(id: Integer): void
    createJobPosting(data: Object): JobPosting
    updateJobPosting(id: Integer, data: Object): JobPosting
    deleteJobPosting(id: Integer): void
}

'======================
' Domain Entities
'======================
class Skill {
    id: Integer
    name: String
    getName(): String
    validate(): Boolean
}

class Department {
    id: Integer
    name: String
    getName(): String
    validate(): Boolean
}

class JobPosting {
    id: Integer
    title: String
    description: String
    status: JobPostingStatus
    publish(): void
    close(): void
    updateRequirements(requirements: Requirements): void
    getOpenJobs(): JobPosting[*]
}

'======================
' Value Objects
'======================
class Requirements {
    skillsRequired: String[*]
    skillsNiceToHave: String[*]
    departments: String[*]
    minYearsExperience: Integer
    notes: String
}

'======================
' Relationships
'======================
JobPosting "1" *-- "1" Requirements : contains
Requirements "0..*" --> "0..*" Skill : references
Requirements "0..*" --> "0..*" Department : references
HRUser "1" --> "0..*" JobPosting : manages
HRUser "1" --> "0..*" Skill : manages_catalog
HRUser "1" --> "0..*" Department : manages_catalog
@enduml
